--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.9.2"
 tauri-plugin-localhost = "2"
+thiserror = "2.0.17"
 
